syntax = "proto3";

package chat;

option go_package = "chat-grpc/proto";

enum ChatType {
  Private = 0;
  Public = 1;
}

service ChatService {
  rpc CreateChat(CreateChatRequest) returns (CreateChatResponse);
  rpc DeleteChat(DeleteChatRequest) returns (DeleteChatResponse);
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  rpc ConnectChat(ConnectChatRequest) returns (ConnectChatResponse);
}

message CreateChatRequest {
  string name = 1;
  repeated int64 users = 2;
  ChatType type = 3;
}

message CreateChatResponse {
  int64 chat_id = 1;
}

message DeleteChatRequest {
  int64 chat_id = 1;
}

message DeleteChatResponse {}

message SendMessageRequest {
  int64 chat_id = 1;
  string text = 2;
  int64 sender_id = 3;
}

message SendMessageResponse {
  int64 message_id = 1;
}

message ConnectChatRequest {
  int64 chat_id = 1;
  int64 user_id = 2;
}

message ConnectChatResponse {}